[package]
name = "xandeum-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
xandeum-account-decoder = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-cli-config = { workspace = true }
xandeum-client = { workspace = true }
xandeum-faucet = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-net-utils = { workspace = true }
xandeum-rpc-client = { workspace = true, features = ["default"] }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-transaction-status = { workspace = true }
xandeum-version = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
xandeum-core = { workspace = true }
xandeum-local-cluster = { workspace = true }
xandeum-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
