[package]
name = "xandeum-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
xandeum-client = { workspace = true }
xandeum-core = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-poh = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-tpu-client = { workspace = true }
xandeum-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
