[package]
name = "xandeum-banks-client"
description = "Solana banks client"
documentation = "https://docs.rs/xandeum-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
xandeum-banks-interface = { workspace = true }
xandeum-program = { workspace = true }
xandeum-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
xandeum-banks-server = { workspace = true }
xandeum-runtime = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
