[package]
name = "xandeum-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-cli-config = { workspace = true }
xandeum-client = { workspace = true }
xandeum-connection-cache = { workspace = true }
xandeum-core = { workspace = true }
xandeum-faucet = { workspace = true }
xandeum-genesis = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-net-utils = { workspace = true }
xandeum-rpc = { workspace = true }
xandeum-rpc-client = { workspace = true }
xandeum-rpc-client-api = { workspace = true }
xandeum-rpc-client-nonce-utils = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-thin-client = { workspace = true }
xandeum-tpu-client = { workspace = true }
xandeum-version = { workspace = true }
spl-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
xandeum-local-cluster = { workspace = true }
xandeum-test-validator = { workspace = true }
tempfile = "3.5.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
