[package]
name = "xandeum-bloom"
description = "Solana bloom filter"
documentation = "https://docs.rs/xandeum-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
xandeum-frozen-abi = { workspace = true }
xandeum-frozen-abi-macro = { workspace = true }
xandeum-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
