[package]
name = "xandeum-bucket-map"
description = "xandeum-bucket-map"
documentation = "https://docs.rs/xandeum-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
log = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-sdk = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
xandeum-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_bucket_map"

[[bench]]
name = "bucket_map"
