[package]
name = "xandeum-clap-utils"
description = "Solana utilities for the clap"
documentation = "https://docs.rs/xandeum-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = "2.33.0"
rpassword = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-remote-wallet = { workspace = true }
xandeum-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "xandeum_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
