[package]
name = "xandeum-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/xandeum-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
xandeum-account-decoder = { workspace = true }
xandeum-address-lookup-table-program = { workspace = true }
xandeum-bpf-loader-program = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-cli-config = { workspace = true }
xandeum-cli-output = { workspace = true }
xandeum-client = { workspace = true }
xandeum-config-program = { workspace = true }
xandeum-faucet = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-program-runtime = { workspace = true }
xandeum-pubsub-client = { workspace = true }
xandeum-remote-wallet = { workspace = true, features = ["default"] }
xandeum-rpc-client = { workspace = true, features = ["default"] }
xandeum-rpc-client-api = { workspace = true }
xandeum-rpc-client-nonce-utils = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-tpu-client = { workspace = true, features = ["default"] }
xandeum-transaction-status = { workspace = true }
xandeum-version = { workspace = true }
xandeum-vote-program = { workspace = true }
xandeum_rbpf = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
xandeum-streamer = { workspace = true }
xandeum-test-validator = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "xandeum"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
