[package]
name = "xandeum-client-test"
description = "Solana RPC Test"
documentation = "https://docs.rs/xandeum-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-merkle-tree = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-pubsub-client = { workspace = true }
xandeum-rayon-threadlimit = { workspace = true }
xandeum-rpc = { workspace = true }
xandeum-rpc-client = { workspace = true }
xandeum-rpc-client-api = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-test-validator = { workspace = true }
xandeum-transaction-status = { workspace = true }
xandeum-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
xandeum-logger = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
