[package]
name = "xandeum-client"
description = "Solana Client"
documentation = "https://docs.rs/xandeum-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
xandeum-connection-cache = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-pubsub-client = { workspace = true }
xandeum-quic-client = { workspace = true }
xandeum-rpc-client = { workspace = true, features = ["default"] }
xandeum-rpc-client-api = { workspace = true }
xandeum-rpc-client-nonce-utils = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-thin-client = { workspace = true }
xandeum-tpu-client = { workspace = true, features = ["default"] }
xandeum-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }
rand_chacha = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
