[package]
name = "xandeum-connection-cache"
description = "Solana Connection Cache"
documentation = "https://docs.rs/xandeum-connection-cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rand_chacha = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-net-utils = { workspace = true }
