[package]
name = "xandeum-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/xandeum-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "xandeum-labs/xandeum", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
xandeum-address-lookup-table-program = { workspace = true }
xandeum-bloom = { workspace = true }
xandeum-client = { workspace = true }
xandeum-entry = { workspace = true }
xandeum-frozen-abi = { workspace = true }
xandeum-frozen-abi-macro = { workspace = true }
xandeum-geyser-plugin-manager = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-net-utils = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-poh = { workspace = true }
xandeum-program-runtime = { workspace = true }
xandeum-rayon-threadlimit = { workspace = true }
xandeum-rpc = { workspace = true }
xandeum-rpc-client-api = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-send-transaction-service = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-tpu-client = { workspace = true }
xandeum-transaction-status = { workspace = true }
xandeum-version = { workspace = true }
xandeum-vote-program = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
matches = { workspace = true }
raptorq = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-program-runtime = { workspace = true }
xandeum-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
