[package]
name = "xandeum-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
xandeum-bench-tps = { workspace = true }
xandeum-client = { workspace = true }
xandeum-core = { workspace = true }
xandeum-faucet = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-net-utils = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-rpc = { workspace = true }
xandeum-rpc-client = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-tpu-client = { workspace = true }
xandeum-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
xandeum-local-cluster = { workspace = true }
xandeum-thin-client = { workspace = true }
