[package]
name = "xandeum-download-utils"
description = "Solana Download Utils"
documentation = "https://docs.rs/xandeum-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
