[package]
name = "xandeum-entry"
description = "Solana Entry"
documentation = "https://docs.rs/xandeum-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen = { workspace = true }
dlopen_derive = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-merkle-tree = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-rayon-threadlimit = { workspace = true }
xandeum-sdk = { workspace = true }

[dev-dependencies]
matches = { workspace = true }
xandeum-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
