[package]
name = "xandeum-faucet"
description = "Solana Faucet"
documentation = "https://docs.rs/xandeum-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-cli-config = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-version = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "xandeum_faucet"

[[bin]]
name = "xandeum-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
