[package]
name = "xandeum-genesis-utils"
description = "Solana Genesis Utils"
documentation = "https://docs.rs/xandeum-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
xandeum-download-utils = { workspace = true }
xandeum-rpc-client = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
