[package]
name = "xandeum-genesis"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/xandeum-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-cli-config = { workspace = true }
xandeum-entry = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-stake-program = { workspace = true }
xandeum-version = { workspace = true }
xandeum-vote-program = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "xandeum-genesis"
path = "src/main.rs"

[lib]
name = "xandeum_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
