[package]
name = "xandeum-geyser-plugin-interface"
description = "The Solana Geyser plugin interface."
documentation = "https://docs.rs/xandeum-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
