[package]
name = "xandeum-gossip"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/xandeum-gossip"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bv = { workspace = true, features = ["serde"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
matches = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
xandeum-bloom = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-client = { workspace = true }
xandeum-entry = { workspace = true }
xandeum-frozen-abi = { workspace = true }
xandeum-frozen-abi-macro = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-net-utils = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-rayon-threadlimit = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-thin-client = { workspace = true }
xandeum-tpu-client = { workspace = true }
xandeum-version = { workspace = true }
xandeum-vote-program = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
num_cpus = { workspace = true }
regex = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "xandeum-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
