[package]
name = "xandeum-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/xandeum-ledger-tool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
chrono = { workspace = true, features = ["default"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
xandeum-account-decoder = { workspace = true }
xandeum-bpf-loader-program = { workspace = true }
xandeum-clap-utils = { workspace = true }
xandeum-cli-output = { workspace = true }
xandeum-core = { workspace = true }
xandeum-entry = { workspace = true }
xandeum-geyser-plugin-manager = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-logger = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-program-runtime = { workspace = true }
xandeum-rpc = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-stake-program = { workspace = true }
xandeum-storage-bigtable = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-transaction-status = { workspace = true }
xandeum-version = { workspace = true }
xandeum-vote-program = { workspace = true }
xandeum_rbpf = { workspace = true, features = ["debugger"] }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
bytecount = { workspace = true }

[target."cfg(unix)".dependencies]
signal-hook = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
