[package]
name = "xandeum-ledger"
description = "Solana ledger"
documentation = "https://docs.rs/xandeum-ledger"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
chrono-humanize = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
fs_extra = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
reed-solomon-erasure = { workspace = true, features = ["simd-accel"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
xandeum-account-decoder = { workspace = true }
xandeum-bpf-loader-program = { workspace = true }
xandeum-entry = { workspace = true }
xandeum-frozen-abi = { workspace = true }
xandeum-frozen-abi-macro = { workspace = true }
xandeum-measure = { workspace = true }
xandeum-metrics = { workspace = true }
xandeum-perf = { workspace = true }
xandeum-program-runtime = { workspace = true }
xandeum-rayon-threadlimit = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-stake-program = { workspace = true }
xandeum-storage-bigtable = { workspace = true }
xandeum-storage-proto = { workspace = true }
xandeum-transaction-status = { workspace = true }
xandeum-vote-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
static_assertions = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
trees = { workspace = true }

[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.21.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
bs58 = { workspace = true }
matches = { workspace = true }
xandeum-account-decoder = { workspace = true }
xandeum-logger = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lib]
crate-type = ["lib"]
name = "xandeum_ledger"

[[bench]]
name = "sigverify_shreds"

[[bench]]
name = "blockstore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
