[package]
name = "xandeum-local-cluster"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/xandeum-local-cluster"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
xandeum-client = { workspace = true }
xandeum-config-program = { workspace = true }
xandeum-core = { workspace = true }
xandeum-entry = { workspace = true }
xandeum-gossip = { workspace = true }
xandeum-ledger = { workspace = true }
xandeum-pubsub-client = { workspace = true }
xandeum-rpc-client = { workspace = true }
xandeum-rpc-client-api = { workspace = true }
xandeum-runtime = { workspace = true }
xandeum-sdk = { workspace = true }
xandeum-stake-program = { workspace = true }
xandeum-streamer = { workspace = true }
xandeum-thin-client = { workspace = true }
xandeum-tpu-client = { workspace = true }
xandeum-vote-program = { workspace = true }
tempfile = { workspace = true }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
gag = { workspace = true }
serial_test = { workspace = true }
xandeum-download-utils = { workspace = true }
xandeum-logger = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
